# list_to_konsole-tabs_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
