[package]
name = "list-to-tabs"
version = "0.0.0"
authors = ["Jack Sims jack.m.sims@protonmail.com"]
license = "Apache-2.0"
description = "Cli tool for generating Konsole --tabs-from-file lists"
readme = "README.md"
homepage = "https://github.com/jackpots28/list_to_konsole-tabs_rs"
repository = "https://github.com/jackpots28/list_to_konsole-tabs_rs"
keywords = ["cli", "konsole", "utility"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }

[[bin]]
name="list-to-tabs"

